--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="colorPrimary">#EC407A</color>
     <color name="colorPrimaryDark">#C2185B</color>
-    <color name="colorAccent">#64FFDA</color>
+    <color name="colorAccent">#7C4DFF</color>
     <color name="breastfeeding">#EC407A</color>
 </resources>
