--- a/app/src/main/res/layout/activity_breastfeeding.xml
+++ b/app/src/main/res/layout/activity_breastfeeding.xml
@@ -8,18 +8,6 @@
     android:background="@color/breastfeeding"
     tools:context=".BreastfeedingActivity">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/breastfeeding"
-        android:elevation="0dp"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:title="New breastfeeding entry"
-        app:titleTextColor="@android:color/white"
-        app:subtitleTextColor="@android:color/white"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
-
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -47,7 +35,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
-                    android:layout_marginBottom="20dp">
+                    android:layout_marginBottom="20dp"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginEnd="15dp">
 
                     <FrameLayout
                         android:layout_width="match_parent"
@@ -81,7 +71,6 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-
                             android:layout_marginTop="90dp"
                             android:paddingStart="30dp"
                             android:paddingEnd="30dp"
@@ -159,13 +148,13 @@
                             android:padding="20dp"
                             android:orientation="vertical">
 
-                            <android.support.v7.widget.AppCompatTextView
+                            <TextView
                                 android:textAppearance="@style/TextAppearance.AppCompat.Title"
                                 android:textSize="16sp"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="12dp"
-                                android:text="Latching?"/>
+                                android:text=" {faw-child}  Latching?"/>
 
                             <Spinner
                                 android:id="@+id/breastfeedingLatchingSpinner"
@@ -192,13 +181,13 @@
                             android:padding="20dp"
                             android:orientation="vertical">
 
-                            <android.support.v7.widget.AppCompatTextView
+                            <TextView
                                 android:textAppearance="@style/TextAppearance.AppCompat.Title"
                                 android:textSize="16sp"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="12dp"
-                                android:text="Baby alertness?"/>
+                                android:text="{faw-bell}  Baby alertness?"/>
 
                             <Spinner
                                 android:id="@+id/breastfeedingBabyAlertnessSpinner"
@@ -225,13 +214,13 @@
                             android:padding="20dp"
                             android:orientation="vertical">
 
-                            <android.support.v7.widget.AppCompatTextView
+                            <TextView
                                 android:textAppearance="@style/TextAppearance.AppCompat.Title"
                                 android:textSize="16sp"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="12dp"
-                                android:text="Problems?"/>
+                                android:text=" {faw-exclamation}   Problems?"/>
 
                             <Spinner
                                 android:id="@+id/breastfeedingProblemsSpinner"
@@ -251,5 +240,17 @@
         </ScrollView>
 
     </FrameLayout>
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/breastfeeding"
+        android:elevation="0dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:title="Breastfeeding"
+        app:titleTextColor="@android:color/white"
+        app:subtitleTextColor="@android:color/white"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
 </android.support.constraint.ConstraintLayout>
